feat: Add settings screens for user profile, localization, and data deletion
- Implemented UserProfileSettingsScreen for managing user profile details.
- Created LocalizationSettingsScreen to allow users to change app language preferences.
- Added DeleteDataSettingsScreen for confirming and executing the deletion of stored visions.
- Developed main SettingsScreen to navigate between user profile, localization, and data deletion settings.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -739,5 +739,55 @@
   "justNow": "Just now",
   "@justNow": {
     "description": "Text for very recent time"
+  },
+
+  "settingsPageTitle": "Settings",
+  "@settingsPageTitle": {
+    "description": "Title for the settings page"
+  },
+
+  "userProfileSettings": "User Profile",
+  "@userProfileSettings": {
+    "description": "Settings menu item for user profile settings"
+  },
+
+  "userProfileSettingsDescription": "Manage your personal information",
+  "@userProfileSettingsDescription": {
+    "description": "Description for user profile settings menu item"
+  },
+
+  "localizationSettings": "Localization",
+  "@localizationSettings": {
+    "description": "Settings menu item for localization settings"
+  },
+
+  "localizationSettingsDescription": "Change app language and region",
+  "@localizationSettingsDescription": {
+    "description": "Description for localization settings menu item"
+  },
+
+  "deleteDataSettings": "Delete Data",
+  "@deleteDataSettings": {
+    "description": "Settings menu item for delete data settings"
+  },
+
+  "deleteDataSettingsDescription": "Manage stored data and visions",
+  "@deleteDataSettingsDescription": {
+    "description": "Description for delete data settings menu item"
+  },
+
+  "userProfilePageTitle": "User Profile",
+  "@userProfilePageTitle": {
+    "description": "Title for the user profile settings page"
+  },
+
+  "localizationPageTitle": "Localization",
+  "@localizationPageTitle": {
+    "description": "Title for the localization settings page"
+  },
+
+  "deleteDataPageTitle": "Delete Data",
+  "@deleteDataPageTitle": {
+    "description": "Title for the delete data settings page"
   }
 }
