Refactor: Update localization strings and improve focus handling in home screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -45,7 +45,7 @@
     "description": "Button text to ask the oracle a question"
   },
 
-  "listenToOracle": "LISTEN TO THE ORACLE",
+  "listenToOracle": "LET THE ORACLE SPEAK",
   "@listenToOracle": {
     "description": "Button text to listen to oracle's vision without a question"
   },
