--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -9,7 +9,7 @@
   "selectYourOracle": "SELEZIONA IL TUO ORACOLO",
   "everyOracleUniquePersonality": "Ogni oracolo ha la sua personalità unica",
   "askTheOracle": "DOMANDA ALL'ORACOLO",
-  "listenToOracle": "ASCOLTA L'ORACOLO",
+  "listenToOracle": "LASCIA PARLARE L'ORACOLO",
   "enterQuestionPlaceholder": "Poni la tua domanda all'{oracleName}...",
   "enterQuestionFirst": "📝 Inserisci una domanda prima di chiedere!",
   "markAsFavoriteOracle": "Segna come oracolo preferito",
