feat: Implement onboarding experience with multiple screens and localization
- Added onboarding flow with welcome, features, and personalization screens.
- Introduced onboarding service to manage onboarding completion state.
- Updated localization files for English and Italian to include onboarding texts.
- Enhanced splash screen to navigate to onboarding if not completed.
- Created UI components for onboarding screens with dynamic content.

--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -141,5 +141,25 @@
   "deleteDataSettingsDescription": "Gestisci dati memorizzati e visioni",
   "userProfilePageTitle": "Profilo Utente",
   "localizationPageTitle": "Localizzazione",
-  "deleteDataPageTitle": "Elimina Dati"
+  "deleteDataPageTitle": "Elimina Dati",
+  "skip": "Salta",
+  "welcomeToProfetAI": "Benvenuto in Profet AI",
+  "discoverMysticalInsights": "Scopri intuizioni mistiche attraverso oracoli unici",
+  "beginJourney": "Inizia il Viaggio",
+  "unlockMysticalPowers": "Sblocca Poteri Mistici",
+  "personalizedPredictions": "Predizioni Personalizzate",
+  "personalizedPredictionsDesc": "Fai domande e ricevi intuizioni su misura dal tuo oracolo scelto",
+  "randomVisions": "Visioni Casuali",
+  "randomVisionsDesc": "Ottieni saggezza spontanea quando hai più bisogno di guida",
+  "visionBook": "Libro delle Visioni",
+  "visionBookDesc": "Salva e rivedi le tue predizioni e intuizioni preferite",
+  "uniqueThemes": "Temi Unici",
+  "uniqueThemesDesc": "Ogni oracolo ha la propria identità visiva mistica",
+  "continueButton": "Continua",
+  "personalizeYourExperience": "Personalizza la Tua Esperienza",
+  "personalizeOptional": "Opzionale - Puoi sempre cambiarlo dopo",
+  "whatShouldOraclesCallYou": "Come dovrebbero chiamarti gli oracoli?",
+  "enterYourNameOptional": "Inserisci il tuo nome (opzionale)",
+  "doYouHavePreferredOracle": "Hai un oracolo preferito? (Top 5)",
+  "enterTheMysticalRealm": "Entra nel Regno Mistico"
 }
