feat: Enhance onboarding personalization with life focus areas and stages
- Updated English and Italian localization files to remove oracle preference limit and add new labels for life focus areas and life stages.
- Modified AppLocalizations to include new getters for life focus areas and life stages.
- Expanded UserProfile model to include fields for life focus areas and life stage.
- Updated onboarding flow to capture user preferences for life focus areas and life stage.
- Implemented UI components for selecting life focus areas and life stages in onboarding and settings screens.
- Added functionality to reset onboarding process from settings.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -881,7 +881,7 @@
     "description": "Placeholder text for name input"
   },
 
-  "doYouHavePreferredOracle": "Do you have a preferred oracle? (Top 5)",
+  "doYouHavePreferredOracle": "Do you have a preferred oracle?",
   "@doYouHavePreferredOracle": {
     "description": "Label for oracle preference selection"
   },
@@ -889,5 +889,38 @@
   "enterTheMysticalRealm": "Enter the Mystical Realm",
   "@enterTheMysticalRealm": {
     "description": "Final onboarding button text"
-  }
+  },
+
+  "lifeFocusAreasLabel": "What areas of life are you seeking guidance on?",
+  "@lifeFocusAreasLabel": {
+    "description": "Label for life focus areas selection"
+  },
+  "lifeFocusAreasHint": "Select up to 3 areas (optional)",
+  "@lifeFocusAreasHint": {
+    "description": "Hint for life focus areas selection"
+  },
+  "lifeStageLabel": "What best describes your current life phase?",
+  "@lifeStageLabel": {
+    "description": "Label for life stage selection"
+  },
+  "lifeStageHint": "Select your current phase (optional)",
+  "@lifeStageHint": {
+    "description": "Hint for life stage selection"
+  },
+
+  "lifeFocusLoveRelationships": "Love & Relationships",
+  "lifeFocusCareerPurpose": "Career & Purpose",
+  "lifeFocusFamilyHome": "Family & Home",
+  "lifeFocusHealthWellness": "Health & Wellness",
+  "lifeFocusMoneyAbundance": "Money & Abundance",
+  "lifeFocusSpiritualGrowth": "Spiritual Growth",
+  "lifeFocusPersonalDevelopment": "Personal Development",
+  "lifeFocusCreativityPassion": "Creativity & Passion",
+
+  "lifeStageStartingNewChapter": "Starting a new chapter",
+  "lifeStageSeekingDirection": "Seeking direction",
+  "lifeStageFacingChallenges": "Facing challenges",
+  "lifeStagePeriodOfGrowth": "In a period of growth",
+  "lifeStageLookingForStability": "Looking for stability",
+  "lifeStageEmbracingChange": "Embracing change"
 }
