--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -141,5 +141,46 @@
   "deleteDataSettingsDescription": "Gestisci dati memorizzati e visioni",
   "userProfilePageTitle": "Profilo Utente",
   "localizationPageTitle": "Localizzazione",
-  "deleteDataPageTitle": "Elimina Dati"
+  "deleteDataPageTitle": "Elimina Dati",
+  "skip": "Salta",
+  "welcomeToProfetAI": "Benvenuto in Profet AI",
+  "discoverMysticalInsights": "Scopri intuizioni mistiche attraverso oracoli unici",
+  "beginJourney": "Inizia il Viaggio",
+  "unlockMysticalPowers": "Sblocca Poteri Mistici",
+  "personalizedPredictions": "Predizioni Personalizzate",
+  "personalizedPredictionsDesc": "Fai domande e ricevi intuizioni su misura dal tuo oracolo scelto",
+  "randomVisions": "Visioni Casuali",
+  "randomVisionsDesc": "Ottieni saggezza spontanea quando hai più bisogno di guida",
+  "visionBook": "Libro delle Visioni",
+  "visionBookDesc": "Salva e rivedi le tue predizioni e intuizioni preferite",
+  "uniqueThemes": "Temi Unici",
+  "uniqueThemesDesc": "Ogni oracolo ha la propria identità visiva mistica",
+  "continueButton": "Continua",
+  "personalizeYourExperience": "Personalizza la Tua Esperienza",
+  "personalizeOptional": "Opzionale - Puoi sempre cambiarlo dopo",
+  "whatShouldOraclesCallYou": "Come dovrebbero chiamarti gli oracoli?",
+  "enterYourNameOptional": "Inserisci il tuo nome (opzionale)",
+  "doYouHavePreferredOracle": "Hai un oracolo preferito?",
+  "enterTheMysticalRealm": "Entra nel Regno Mistico",
+
+  "lifeFocusAreasLabel": "In quali aree della vita cerchi guida?",
+  "lifeFocusAreasHint": "Seleziona fino a 3 aree (opzionale)",
+  "lifeStageLabel": "Cosa descrive meglio la tua fase di vita attuale?",
+  "lifeStageHint": "Seleziona la tua fase attuale (opzionale)",
+
+  "lifeFocusLoveRelationships": "Amore e Relazioni",
+  "lifeFocusCareerPurpose": "Carriera e Scopo",
+  "lifeFocusFamilyHome": "Famiglia e Casa",
+  "lifeFocusHealthWellness": "Salute e Benessere",
+  "lifeFocusMoneyAbundance": "Denaro e Abbondanza",
+  "lifeFocusSpiritualGrowth": "Crescita Spirituale",
+  "lifeFocusPersonalDevelopment": "Sviluppo Personale",
+  "lifeFocusCreativityPassion": "Creatività e Passione",
+
+  "lifeStageStartingNewChapter": "Sto iniziando un nuovo capitolo",
+  "lifeStageSeekingDirection": "Sto cercando una direzione",
+  "lifeStageFacingChallenges": "Sto affrontando delle sfide",
+  "lifeStagePeriodOfGrowth": "Sono in un periodo di crescita",
+  "lifeStageLookingForStability": "Sto cercando stabilità",
+  "lifeStageEmbracingChange": "Sto abbracciando il cambiamento"
 }
