--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -182,5 +182,56 @@
   "lifeStageFacingChallenges": "Sto affrontando delle sfide",
   "lifeStagePeriodOfGrowth": "Sono in un periodo di crescita",
   "lifeStageLookingForStability": "Sto cercando stabilità",
-  "lifeStageEmbracingChange": "Sto abbracciando il cambiamento"
+  "lifeStageEmbracingChange": "Sto abbracciando il cambiamento",
+
+  "visionManagement": "Gestione Visioni",
+  "visionManagementDescription": "Gestisci la cronologia delle conversazioni e le preferenze",
+  "debugTools": "Strumenti Debug",
+  "admobDebugTest": "Debug AdMob & Test",
+  "admobDebugTestDescription": "Testa la funzionalità e i callback degli annunci",
+  "resetOnboarding": "Reimposta Onboarding",
+  "resetOnboardingDescription": "Forza la visualizzazione dell'onboarding al riavvio dell'app",
+  "resetOnboardingTitle": "Reimposta Onboarding",
+  "resetOnboardingContent": "Questo reimposterà lo stato dell'onboarding. Il flusso di onboarding verrà mostrato di nuovo quando riavvii l'app.\n\nSei sicuro?",
+  "reset": "Reimposta",
+  "onboardingResetSuccess": "Onboarding reimpostato con successo. Riavvia l'app per vedere il flusso di onboarding.",
+  "onboardingResetFailed": "Impossibile reimpostare l'onboarding: {error}",
+  "conversationStatistics": "Statistiche Conversazioni",
+  "totalConversations": "Conversazioni Totali",
+  "totalMessages": "Messaggi Totali",
+  "averageMessagesPerConversation": "Media Messaggi per Conversazione",
+  "dataManagement": "Gestione Dati",
+  "clearAllConversations": "Cancella Tutte le Conversazioni",
+  "clearAllConversationsTitle": "Cancella Tutte le Conversazioni",
+  "clearAllConversationsContent": "⚠️ Questa azione eliminerà permanentemente TUTTA la cronologia delle conversazioni e non può essere annullata.\n\nSei sicuro di voler continuare?",
+  "deleteAll": "Elimina Tutto",
+  "deletingAllConversations": "Eliminazione di tutte le conversazioni...",
+  "conversationsDeletedSuccess": "Tutte le conversazioni eliminate con successo",
+  "conversationsDeleteFailed": "Impossibile eliminare le conversazioni: {error}",
+  "noConversationsYet": "Nessuna conversazione ancora",
+  "noConversationsDescription": "Inizia a chattare con un profeta per vedere le statistiche delle tue conversazioni qui.",
+  "failedToLoadConversationData": "Impossibile caricare i dati delle conversazioni: {error}",
+  "personalInformationDescription": "Gestisci le tue informazioni personali di base",
+  "interestsAndTopicsDescription": "Seleziona le tue aree di interesse",
+  "personalizeYourExperienceDescription": "Personalizza le tue preferenze di guida",
+  "yourAiProfile": "Il Tuo Profilo AI",
+  "yourAiProfileDescription": "Visualizza il tuo profilo biografico generato e le impostazioni sulla privacy",
+  "failedToLoadProfile": "Impossibile caricare il profilo: {error}",
+  "failedToSaveProfile": "Impossibile salvare il profilo: {error}",
+  "yourProfile": "Il Tuo Profilo",
+  "debugTools": "Strumenti Debug",
+  "biographicalDataDeletedSuccess": "Tutti i dati biografici eliminati con successo",
+  "failedToDeleteData": "Impossibile eliminare i dati: {error}",
+  "deleteBiographicalData": "Elimina Dati Biografici",
+  "deleteBiographicalDataContent": "Questo eliminerà permanentemente tutte le tue informazioni biografiche. Questa azione non può essere annullata.\n\nSei sicuro di voler continuare?",
+  "deleteAllData": "Elimina Tutti i Dati",
+  "failedToLoadBiographicalProfile": "Impossibile caricare il profilo biografico: {error}",
+  "loadingYourProfile": "Caricamento del tuo profilo...",
+  "retry": "Riprova",
+  "noBioAvailable": "Nessuna biografia ancora disponibile. I profeti hanno bisogno di più informazioni.",
+  "askTheProphets": "Chiedi ai Profeti",
+  "yourProfileHeader": "Il Tuo Profilo",
+  "generatedFromProphetInteractions": "Generato dalle tue interazioni con i profeti",
+  "noBiographicalContentAvailable": "Nessun contenuto biografico disponibile",
+  "deleteAllDataTooltip": "Elimina Tutti i Dati"
 }
